samples/_failures_safe/1761365721_b8c502_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_08c5b81c.c: In function ‘main’:
./samples/SAFE/__tmp_08c5b81c.c:151:5: error: expected declaration or statement at end of input
  151 |     if (choice < 1 || choice > num_processors) {
      |     ^~
./samples/SAFE/__tmp_08c5b81c.c:151:5: error: expected declaration or statement at end of input
